# fuelflux

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  coverage.info  coverage_filtered.info
.github/workflows/: build.yml  release-arm64-deb.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fuelflux_tests[1]_include.cmake  fuelflux_tests[1]_tests.cmake
build-test/Testing/Temporary/: CTestCostData.txt
config/: logging.json  logging.json.in
deploy/: README.md  fuelflux.env.example  fuelflux.service  install.sh  logging.json
deploy/debian/: control  postinst  prerm
doc/: API_SpecificationV6.docx
docs/: DISPLAY_CONFIGURATION.md  display_output_reference.html  display_output_reference.md  hardware.md  hardware_display.md  installation.md  logging.md  opi-zero2w-nhd12864-wiring.md  orange-pi-hardware-permissions.md  orange_pi_sim800_ppp_guide.md  sim800  state_machine.md  state_machine_transitions.md  state_machine_visual.md
enc_temp_folder/35d1b34459731f282ba1eea778576a6f/: console_emulator.cpp
include/: backend.h  backend_dns.h  backend_factory.h  backend_utils.h  backlog.h  backlog_storage.h  backlog_worker.h  bounded_executor.h  cache_manager.h  cares_resolver.h  cloud_service.h  config.h  console_emulator.h  controller.h  logger.h  message_storage.h  session.h  sim800c_backend.h  state_machine.h  system_config.h  timing_config.h  types.h  url_utils.h  user_cache.h  version.h.in
include/display/: console_display.h  display_config.h  four_line_display.h  four_line_display_impl.h  graphics.h  hardware_display.h  ili9488.h  ili9488_display.h  spi_linux.h  st7565.h  st7565_display.h
include/hardware/: gpio_line.h  hardware_config.h  mcp23017.h
include/nhd/: four_line_display.h  ft_text.h  graphics.h  ili9488.h  lcd_driver.h  spi_linux.h  st7565.h
include/peripherals/: card_reader.h  display.h  flow_meter.h  gpio_gpiod.h  keyboard.h  keyboard_utils.h  peripheral_interface.h  pump.h
src/: backend.cpp  backend_base.cpp  backend_factory.cpp  backlog.cpp  backlog_storage.cpp  backlog_worker.cpp  bounded_executor.cpp  cache_manager.cpp  cares_resolver.cpp  cloud_service.cpp  console_emulator.cpp  controller.cpp  logger.cpp  main.cpp  message_storage.cpp  sim800c_backend.cpp  state_machine.cpp  url_utils.cpp  user_cache.cpp
src/display/: console_display.cpp  four_line_display.cpp  four_line_display_impl.cpp  ft_text.cpp  graphics.cpp  hardware_display.cpp  ili9488.cpp  ili9488_display.cpp  spi_linux.cpp  st7565.cpp  st7565_display.cpp
src/hardware/: gpio_line.cpp  mcp23017.cpp
src/nhd/: four_line_display.cpp  ft_text.cpp  gpio_gpiod.cpp  graphics.cpp  ili9488.cpp  spi_linux.cpp  st7565.cpp
src/peripherals/: card_reader.cpp  display.cpp  flow_meter.cpp  gpio_gpiod.cpp  keyboard.cpp  pump.cpp
tests/: backend_base_test.cpp  backend_bounded_test.cpp  backend_dns_test.cpp  backend_factory_test.cpp  backend_test.cpp  backlog_test.cpp  backlog_worker_test.cpp  bounded_executor_test.cpp  cache_manager_test.cpp  cares_resolver_test.cpp  console_emulator_test.cpp  controller_test.cpp  deploy_scripts_test.cpp  flow_meter_test.cpp  four_line_display_impl_test.cpp  four_line_display_test.cpp  message_storage_test.cpp  url_utils_test.cpp  user_cache_test.cpp
